--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install psycopg2-binary
+        pip install psycopg2
         pip install -r requirements.txt
     - name: Lint with flake8
       run: |
